--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://example.com"
 title = "tech_damo"
 themesDir = "themes"
-theme = "hugo-theme-m10c"
+theme = "m10c"
 paginate = 6
 
 [menu]
