--- a/.github/workflows/publish_to_gh_pages.yml
+++ b/.github/workflows/publish_to_gh_pages.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout Changes
         uses: actions/checkout@v2
+        with: 
+          submodules: true
 
       - name: Install Hugo
         uses: peaceiris/actions-hugo@v2
