--- a/.github/workflows/publish_to_gh_pages.yml
+++ b/.github/workflows/publish_to_gh_pages.yml
@@ -17,7 +17,8 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 'latest'
-
+          extended: true
+    
       - name: Build Site Files
         run: hugo --minify
 
