--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://damienomurchu.github.io"
+baseURL = "https://tech.murchu.me"
 title = "@damien"
 themesDir = "themes"
 theme = "m10c"
